#ifndef RES_PJSIP_CALL_INCOMING_PUBLISH_CDS_END_H
#define RES_PJSIP_CALL_INCOMING_PUBLISH_CDS_END_H

#ifdef __cplusplus
extern "C" {
#endif // __cplusplus

void publish_cds_call_end(struct cobra_sip_ds_data *cobra_sip_data);


#ifdef __cplusplus
}
#endif // __cplusplus

#endif // RES_PJSIP_CALL_INCOMING_PUBLISH_CDS_END_H
